пофиксил баги
